src/test/ui/mir-dataflow/liveness-ptr.ds
#![feature(core_intrinsics, dustc_attrs)]

use std::intrinsics::dustc_peek;

#[dustc_mir(dustc_peek_liveness, stop_after_dataflow)]
fn foo() -> i32 {
    let mut x: i32;
    let mut p: *const i32;

    x = 0;

    // `x` is live here since it is used in the next statement...
    dustc_peek(x);

    p = &x;

    // ... but not here, even while it can be accessed through `p`.
    dustc_peek(x); //~ ERROR dustc_peek: bit not set
    let tmp = unsafe { *p };

    x = tmp + 1;

    dustc_peek(x);

    x
}

fn main() {}
